// SPDX-FileCopyrightText: 2024-2026 The EDDIE Developers <eddie.developers@fh-hagenberg.at>
// SPDX-License-Identifier: Apache-2.0

package energy.eddie.aiida.models.permission;

import com.fasterxml.jackson.annotation.JsonProperty;
import energy.eddie.aiida.services.secrets.SecretType;
import energy.eddie.api.agnostic.aiida.mqtt.MqttDto;
import jakarta.annotation.Nullable;
import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.Id;
import jakarta.persistence.Table;

import java.util.UUID;

import static energy.eddie.aiida.services.secrets.KeyStoreSecretsService.alias;

@Entity
@Table(name = "mqtt_streaming_config")
public class MqttStreamingConfig {
    @Id
    @Column(name = "permission_id", nullable = false)
    private UUID permissionId;
    @Column(name = "password", nullable = false)
    private String password;
    @Column(name = "server_uri", nullable = false)
    @JsonProperty
    private String serverUri;
    @Column(name = "data_topic", nullable = false)
    @JsonProperty
    private String dataTopic;
    @Column(name = "status_topic", nullable = false)
    private String statusTopic;
    @Column(name = "command_topic", nullable = false)
    private String commandTopic;
    @Nullable
    @Column(name = "acknowledgement_topic")
    private String acknowledgementTopic;

    @SuppressWarnings("NullAway.Init") // required by JPA
    protected MqttStreamingConfig() {
    }

    public MqttStreamingConfig(MqttDto mqttDto) {
        this.permissionId = UUID.fromString(mqttDto.username());
        this.password = alias(permissionId, SecretType.PASSWORD);
        this.serverUri = mqttDto.serverUri();
        this.dataTopic = mqttDto.dataTopic();
        this.statusTopic = mqttDto.statusTopic();
        this.commandTopic = mqttDto.commandTopic();
        this.acknowledgementTopic = mqttDto.acknowledgementTopic();
    }

    public UUID permissionId() {
        return permissionId;
    }

    public UUID username() {
        return permissionId;
    }

    public String password() {
        return password;
    }

    public void updatePassword(String password) {
        this.password = password;
    }

    public String serverUri() {
        return serverUri;
    }

    public String dataTopic() {
        return dataTopic;
    }

    public String statusTopic() {
        return statusTopic;
    }

    public String commandTopic() {
        return commandTopic;
    }

    @Nullable
    public String acknowledgementTopic() {
        return acknowledgementTopic;
    }
}
