// SPDX-FileCopyrightText: 2023-2026 The EDDIE Developers <eddie.developers@fh-hagenberg.at>
// SPDX-License-Identifier: Apache-2.0

package energy.eddie.aiida.models.permission;

import com.fasterxml.jackson.annotation.JsonCreator;
import com.fasterxml.jackson.annotation.JsonIgnore;
import com.fasterxml.jackson.annotation.JsonInclude;
import com.fasterxml.jackson.annotation.JsonProperty;
import energy.eddie.aiida.errors.permission.InvalidInboundPermissionException;
import energy.eddie.aiida.models.datasource.DataSource;
import energy.eddie.aiida.models.permission.dataneed.AiidaLocalDataNeed;
import energy.eddie.aiida.models.permission.dataneed.InboundAiidaLocalDataNeed;
import energy.eddie.cim.agnostic.PermissionCommand;
import energy.eddie.dataneeds.utils.cron.CronExpressionConverter;
import energy.eddie.dataneeds.utils.cron.CronExpressionDeserializer;
import energy.eddie.dataneeds.utils.cron.CronExpressionSerializer;
import io.swagger.v3.oas.annotations.media.Schema;
import jakarta.annotation.Nullable;
import jakarta.persistence.*;
import org.jspecify.annotations.NonNull;
import org.springframework.scheduling.support.CronExpression;
import tools.jackson.databind.annotation.JsonDeserialize;
import tools.jackson.databind.annotation.JsonSerialize;

import java.time.Instant;
import java.util.UUID;

import static java.util.Objects.requireNonNull;

@Entity
@Table(name = "permission")
@JsonInclude(JsonInclude.Include.NON_NULL)
public class Permission {
    @Id
    @Column(name = "permission_id", nullable = false, updatable = false)
    @Schema(description = "Unique ID of this permission.", requiredMode = Schema.RequiredMode.REQUIRED, example = "a4dc1bad-b9fe-47ae-9336-690cfb4aada9")
    @JsonProperty
    private UUID permissionId;

    @Column(name = "eddie_id", updatable = false)
    @Schema(description = "Unique ID of the EDDIE application that created this permission.", requiredMode = Schema.RequiredMode.REQUIRED, example = "a4dc1bad-b9fe-47ae-9336-690cfb4aada9")
    @JsonProperty
    private UUID eddieId;

    @Column(nullable = false)
    @Enumerated(EnumType.STRING)
    @Schema(description = "Status of this permission.", requiredMode = Schema.RequiredMode.REQUIRED, example = "ACCEPTED")
    @JsonProperty
    private PermissionStatus status;

    @Column(name = "service_name")
    @Schema(description = "Name of the EP service that requested near real-time data.", example = "My Energy Visualization Service")
    @JsonProperty
    @Nullable
    private String serviceName;

    @Column(name = "display_name")
    @Schema(description = "User-chosen display name for this permission.", example = "My smart meter")
    @JsonProperty
    @Nullable
    private String displayName;

    @Column(name = "start_time")
    @Schema(description = "UTC timestamp when the data sharing should start.")
    @JsonProperty
    @Nullable
    private Instant startTime;

    @Nullable
    @Column(name = "expiration_time")
    @Schema(description = "UTC timestamp the data sharing should automatically stop. Must be after startTime.")
    @JsonProperty
    private Instant expirationTime;

    @Nullable
    @Column(name = "grant_time")
    @Schema(description = "UTC timestamp when the customer granted the sharing permission.")
    @JsonProperty
    private Instant grantTime;

    @Nullable
    @Column(name = "revoke_time")
    @Schema(description = "UTC timestamp when the permission was revoked or terminated. See status for the exact reason.")
    @JsonProperty
    private Instant revokeTime = null;

    @Nullable
    @Column(name = "connection_id")
    @Schema(description = "Connection ID as supplied by EDDIE/EP.", example = "SomeRandomString")
    @JsonIgnore
    private String connectionId;

    @Nullable
    @Column(name = "meter_id")
    @Schema(description = "ID of a physical smart meter asset used to map flexible connection agreements and control data source selection.", example = "003114735")
    @JsonProperty
    private String meterId;

    @Nullable
    @PrimaryKeyJoinColumn
    @OneToOne(cascade = CascadeType.ALL, fetch = FetchType.LAZY)
    @JsonProperty
    private MqttStreamingConfig mqttStreamingConfig;

    @Column(name = "handshake_url", nullable = false)
    @JsonIgnore
    private String handshakeUrl;

    @Column(name = "access_token", nullable = false)
    @JsonIgnore
    private String accessToken;

    @Nullable
    @JoinColumn(name = "data_need_id", referencedColumnName = "data_need_id", insertable = false)
    @ManyToOne(optional = false, cascade = CascadeType.PERSIST)
    @JsonProperty
    private AiidaLocalDataNeed dataNeed;

    @Column(name = "user_id", nullable = false)
    @Schema(description = "UUID of the user that owns the permission.")
    @JsonProperty
    private UUID userId;

    @Nullable
    @JoinColumn(name = "data_source_id", referencedColumnName = "id", insertable = false)
    @ManyToOne(cascade = CascadeType.DETACH)
    @JsonProperty
    private DataSource dataSource;

    @Column(name = "inbound_message_format")
    @Enumerated(EnumType.STRING)
    @Schema(description = "Selected format for inbound permission messages.", example = "CIM_1_12")
    @JsonProperty
    @Nullable
    private InboundMessageFormat inboundMessageFormat;

    @Column(name = "transmission_enabled", nullable = false)
    @JsonProperty
    private boolean transmissionEnabled = true;

    @Nullable
    @Column(name = "transmission_schedule")
    @Convert(converter = CronExpressionConverter.class)
    @JsonProperty
    @JsonSerialize(using = CronExpressionSerializer.class)
    @JsonDeserialize(using = CronExpressionDeserializer.class)
    private CronExpression transmissionSchedule;

    /**
     * Create a new permission from the contents of the QR code. The status will be set to
     * {@link PermissionStatus#CREATED}.
     */
    public Permission(UUID eddieId, UUID permissionId, String handshakeUrl, String accessToken, UUID userId) {
        this.eddieId = eddieId;
        this.permissionId = permissionId;
        this.handshakeUrl = handshakeUrl;
        this.accessToken = accessToken;
        this.status = PermissionStatus.CREATED;
        this.userId = userId;
    }

    /**
     * Constructor only for JPA.
     */
    @SuppressWarnings("NullAway.Init")
    @JsonCreator
    public Permission() {
    }

    /**
     * Returns the UUID of the EDDIE application that created this permission.
     */
    public UUID eddieId() {
        return eddieId;
    }

    /**
     * Returns the UUID of this permission.
     */
    public UUID id() {
        return permissionId;
    }

    /**
     * Returns the UTC start timestamp for sharing data of this permission. Only available if status is
     * {@link PermissionStatus#FETCHED_DETAILS} or a later status.
     */
    public @Nullable Instant startTime() {
        return startTime;
    }

    /**
     * Returns the UTC timestamp when this permission expires and no more data should be shared. Only available if
     * status is {@link PermissionStatus#FETCHED_DETAILS} or a later status.
     */
    public @Nullable Instant expirationTime() {
        return expirationTime;
    }

    /**
     * Returns the UTC timestamp when the customer granted the permission. Will return null until the customer grants
     * the permission. Only available if status is {@link PermissionStatus#ACCEPTED} or a later status.
     */
    public @Nullable Instant grantTime() {
        return grantTime;
    }

    /**
     * Returns the time at which either the EP terminated the permission or the customer revoked the permission. The
     * return value of {@link #status()} indicates which of the two cases occurred.
     */
    public @Nullable Instant revokeTime() {
        return revokeTime;
    }

    /**
     * Returns the connectionId that was generated by the EDDIE framework and is sent along with each message to the EP.
     * Only available if status is {@link PermissionStatus#FETCHED_DETAILS} or a later status.
     */
    public @Nullable String connectionId() {
        return connectionId;
    }

    /**
     * Returns the optional physical meter ID provided by the eligible party.
     * Used to map flexible connection agreements and control data source selection in AIIDA.
     */
    public @Nullable String meterId() {
        return meterId;
    }

    /**
     * Returns the service name for which this permission is for.
     */
    public @Nullable String serviceName() {
        return serviceName;
    }

    /**
     * Returns the user-chosen display name for this permission. Defaults to the data need's name.
     */
    public @Nullable String displayName() {
        return displayName;
    }

    public @Nullable InboundMessageFormat inboundMessageFormat() {
        return inboundMessageFormat;
    }

    /**
     * Returns the current status of the permission.
     */
    public PermissionStatus status() {
        return status;
    }

    /**
     * Only available if status is {@link PermissionStatus#FETCHED_MQTT_CREDENTIALS} or a later status.
     */
    public @Nullable MqttStreamingConfig mqttStreamingConfig() {
        return mqttStreamingConfig;
    }

    public String handshakeUrl() {
        return handshakeUrl;
    }

    public String accessToken() {
        return accessToken;
    }

    public @Nullable UUID userId() {
        return userId;
    }

    public @Nullable DataSource dataSource() {
        return dataSource;
    }

    /**
     * Only available if status is {@link PermissionStatus#FETCHED_DETAILS} or a later status.
     */
    public @Nullable AiidaLocalDataNeed dataNeed() {
        return dataNeed;
    }

    /**
     * Returns whether data transmission is currently enabled for this permission. Defaults to {@code true} and is
     * toggled by {@link PermissionCommand.SetTransmissionEnabled} commands from the EP.
     */
    public boolean transmissionEnabled() {
        return transmissionEnabled;
    }

    public void setStatus(PermissionStatus newStatus) {
        this.status = requireNonNull(newStatus);
    }

    public void setStartTime(Instant startTime) {
        this.startTime = requireNonNull(startTime);
    }

    public void setExpirationTime(Instant expirationTime) {
        this.expirationTime = requireNonNull(expirationTime);
    }

    public void setGrantTime(Instant grantTime) {
        this.grantTime = requireNonNull(grantTime);
    }

    /**
     * Set the UTC timestamp when either the EP terminated the permission or the customer revoked the permission. Use
     * {@link #setStatus(PermissionStatus)} to indicate which of the two cases occurred.
     *
     * @param revokeTime The revocation or termination timestamp.
     */
    public void setRevokeTime(Instant revokeTime) {
        requireNonNull(revokeTime);

        if (grantTime != null && revokeTime.isBefore(grantTime))
            throw new IllegalArgumentException("revokeTime must not be before grantTime.");

        this.revokeTime = revokeTime;
    }

    public void setConnectionId(String connectionId) {
        this.connectionId = requireNonNull(connectionId);
    }

    public void setMeterId(@Nullable String meterId) {
        this.meterId = meterId;
    }

    public void setDisplayName(String displayName) {
        this.displayName = requireNonNull(displayName);
    }

    public void setMqttStreamingConfig(MqttStreamingConfig mqttStreamingConfig) {
        this.mqttStreamingConfig = requireNonNull(mqttStreamingConfig);
    }

    /**
     * Initializes the permission from the data need by deriving {@link #serviceName}, {@link #displayName}
     * and {@link #inboundMessageFormat} from it.
     */
    public void initializeFromDataNeed(AiidaLocalDataNeed dataNeed) {
        this.dataNeed = requireNonNull(dataNeed);
        deriveServiceName(dataNeed);
        deriveDisplayName(dataNeed);
        deriveInboundMessageFormat(dataNeed);
    }

    private void deriveServiceName(AiidaLocalDataNeed dataNeed) {
        this.serviceName = dataNeed.name();
    }

    private void deriveDisplayName(AiidaLocalDataNeed dataNeed) {
        this.displayName = dataNeed.name();
    }

    private void deriveInboundMessageFormat(AiidaLocalDataNeed dataNeed) {
        if (dataNeed instanceof InboundAiidaLocalDataNeed && this.inboundMessageFormat == null) {
            this.inboundMessageFormat = InboundMessageFormat.CIM_1_12;
        } else {
            this.inboundMessageFormat = null;
        }
    }

    public void setDataSource(@Nullable DataSource dataSource) {
        this.dataSource = dataSource;
    }

    public void updateInboundMessageFormat(@NonNull InboundMessageFormat inboundMessageFormat)
            throws InvalidInboundPermissionException {
        if (!(dataNeed instanceof InboundAiidaLocalDataNeed)) {
            throw new InvalidInboundPermissionException(permissionId);
        }

        this.inboundMessageFormat = inboundMessageFormat;
    }

    public void setTransmissionEnabled(boolean transmissionEnabled) {
        this.transmissionEnabled = transmissionEnabled;
    }

    public void setTransmissionSchedule(CronExpression transmissionSchedule) {
        this.transmissionSchedule = requireNonNull(transmissionSchedule);
    }

    /**
     * Returns the schedule that should be used to stream data for this permission: the permission's own
     * transmission schedule if set, otherwise the data need's schedule as a fallback
     */
    @Nullable
    @JsonProperty
    @JsonSerialize(using = CronExpressionSerializer.class)
    public CronExpression effectiveTransmissionSchedule() {
        if (transmissionSchedule != null) {
            return transmissionSchedule;
        }
        return dataNeed != null ? dataNeed.transmissionSchedule() : null;
    }
}
