// SPDX-FileCopyrightText: 2024-2026 The EDDIE Developers <eddie.developers@fh-hagenberg.at>
// SPDX-License-Identifier: Apache-2.0

package energy.eddie.aiida.models.permission.dataneed;

import com.fasterxml.jackson.annotation.JsonProperty;
import energy.eddie.api.agnostic.aiida.AiidaAsset;
import energy.eddie.api.agnostic.aiida.AiidaContext;
import energy.eddie.api.agnostic.aiida.AiidaSchema;
import energy.eddie.cim.agnostic.PermissionCommand;
import energy.eddie.dataneeds.needs.aiida.AiidaDataNeed;
import energy.eddie.dataneeds.needs.aiida.AiidaDataNeedInterface;
import energy.eddie.dataneeds.utils.cron.CronExpressionConverter;
import energy.eddie.dataneeds.utils.cron.CronExpressionDeserializer;
import energy.eddie.dataneeds.utils.cron.CronExpressionSerializer;
import jakarta.persistence.*;
import org.springframework.scheduling.support.CronExpression;
import tools.jackson.databind.annotation.JsonDeserialize;
import tools.jackson.databind.annotation.JsonSerialize;

import java.util.Objects;
import java.util.Set;
import java.util.UUID;

/**
 * Stores the locally required information about a data need of a permission.
 */
@Entity
@DiscriminatorColumn(name = "type")
@Table(name = "aiida_local_data_need")
@SuppressWarnings("NullAway")
public abstract class AiidaLocalDataNeed implements AiidaDataNeedInterface {
    @Id
    @Column(nullable = false, name = "data_need_id")
    @JsonProperty
    protected UUID dataNeedId;

    @Column(name = "type", insertable = false, updatable = false)
    @JsonProperty
    protected String type;

    @Column(nullable = false)
    @JsonProperty
    protected String name;

    @Column(nullable = false)
    @JsonProperty
    protected String purpose;

    @Column(nullable = false, name = "policy_link")
    @JsonProperty
    protected String policyLink;

    @Column(nullable = false, name = "transmission_schedule")
    @Convert(converter = CronExpressionConverter.class)
    @JsonProperty
    @JsonSerialize(using = CronExpressionSerializer.class)
    @JsonDeserialize(using = CronExpressionDeserializer.class)
    protected CronExpression transmissionSchedule;

    @Column(nullable = false, name = "acknowledgement_required")
    @JsonProperty
    protected boolean acknowledgementRequired;

    @ElementCollection(fetch = FetchType.EAGER)
    @CollectionTable(name = "aiida_local_data_need_permission_commands",
            joinColumns = @JoinColumn(name = "data_need_id"))
    @Column(name = "permission_command")
    @Enumerated(EnumType.STRING)
    @JsonProperty
    protected Set<PermissionCommand.Action> allowedPermissionCommands;

    @ElementCollection(fetch = FetchType.EAGER)
    @CollectionTable(name = "aiida_local_data_need_schemas", joinColumns = {@JoinColumn(name = "data_need_id", referencedColumnName = "data_need_id")})
    @Column(name = "schema")
    @JsonProperty
    @Enumerated(EnumType.STRING)
    protected Set<AiidaSchema> schemas;

    @Column(nullable = false, name = "asset")
    @JsonProperty
    @Enumerated(EnumType.STRING)
    protected AiidaAsset asset;

    @ElementCollection(fetch = FetchType.EAGER)
    @CollectionTable(name = "aiida_local_data_need_contexts", joinColumns = @JoinColumn(name = "data_need_id"))
    @Column(name = "context")
    @Enumerated(EnumType.STRING)
    @JsonProperty
    private Set<AiidaContext> contexts;

    /**
     * Constructor only for JPA.
     */
    @SuppressWarnings("NullAway")
    protected AiidaLocalDataNeed() {
    }

    protected AiidaLocalDataNeed(AiidaDataNeed dataNeed) {
        this.dataNeedId = dataNeed.dataNeedId();
        this.type = dataNeed.type();
        this.name = dataNeed.name();
        this.purpose = dataNeed.purpose();
        this.policyLink = dataNeed.policyLink();
        this.transmissionSchedule = dataNeed.transmissionSchedule();
        this.schemas = dataNeed.schemas();
        this.asset = dataNeed.asset();
        this.acknowledgementRequired = dataNeed.acknowledgementRequired();
        this.allowedPermissionCommands = Objects.requireNonNullElse(dataNeed.allowedPermissionCommands(), Set.of());
        this.contexts = Objects.requireNonNullElse(dataNeed.contexts(), Set.of());
    }

    public String name() {
        return name;
    }

    @Override
    public boolean acknowledgementRequired() {
        return acknowledgementRequired;
    }

    @Override
    public Set<PermissionCommand.Action> allowedPermissionCommands() {
        return allowedPermissionCommands;
    }

    @Override
    public AiidaAsset asset() {
        return asset;
    }

    @Override
    public Set<AiidaContext> contexts() {
        return contexts;
    }

    @Override
    public UUID dataNeedId() {
        return dataNeedId;
    }

    @Override
    public Set<AiidaSchema> schemas() {
        return schemas;
    }

    @Override
    public CronExpression transmissionSchedule() {
        return transmissionSchedule;
    }

    @Override
    public String type() {
        return type;
    }
}
