' SPDX-FileCopyrightText: 2025 The EDDIE Developers <eddie.developers@fh-hagenberg.at>
' SPDX-License-Identifier: Apache-2.0

@startuml
'https://plantuml.com/class-diagram

hide empty members
left to right direction

class Permission {
    - permissionId: UUID
    - eddieId: UUID
    - userId: UUID
    - status: PermissionStatus
    - serviceName: String
    - startTime: Instant
    - expirationTime: Instant
    - grantTime: Instant
    - revokeTime: Instant
    - connectionId: String
    - meterId: String
    - minLimitKw: BigDecimal
    - maxLimitKw: BigDecimal
    - handshakeUrl: String
    - accessToken: String
    - dataNeed: AiidaLocalDataNeed
    - mqttStreamingConfig: MqttStreamingConfig
    - dataSource: DataSource
    - inboundMessageFormat: InboundMessageFormat
    - transmissionEnabled: boolean
    - transmissionSchedule: CronExpression
}

class AiidaLocalDataNeed {
}

abstract class DataSource {}

class MqttStreamingConfig {
    - permissionId: UUID
    - username: String
    - password: String
    - serverUri: String
    - dataTopic: String
    - statusTopic: String
    - commandTopic: String
    - acknowledgementTopic: String
}

enum PermissionStatus {
    CREATED,
    FETCHED_DETAILS,
    UNFULFILLABLE,
    ACCEPTED,
    FETCHED_MQTT_CREDENTIALS,
    WAITING_FOR_START,
    STREAMING_DATA,
    REJECTED,
    REVOKED,
    TERMINATED,
    FULFILLED,
    FAILED_TO_START
}

enum InboundMessageFormat {
    CIM_1_12
    OPENADR_3_1
}

Permission "n" o-- "1" AiidaLocalDataNeed
Permission - PermissionStatus
Permission - InboundMessageFormat
Permission "1" *-up- "1" MqttStreamingConfig
Permission "n" o-- "1" DataSource

@enduml